Add Eureka Server